# django-app-experiment

./: .dockerignore  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  manage.py  pyproject.toml
.github/workflows/: build.yaml  deploy-environment.yaml  deploy.yaml  deploy_environment.yaml  deploy_server.sh  test.yaml  test_and_build.yaml
apps/web/: context_processors.py  tests.py  urls.py  views.py
apps/web/tests/: base.py  test_basic_views.py
deploy/: pre-deploy.sh  pre-start.sh  special_test_entrypoint.sh  start.sh
frontend_assets/css/: input.css
hairbrush/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
just_modules/: ci.just  dev.just  setup.just  stack.just
my_journey/: 00_references.md  01_goals_and_introduction.md  02_django_hello_and_local_ci.md  03_dockerize_locally.md  04_webpage_setup.md  05_ci_pipeline.md  06_cd_basics.md  07_health_check_and_cicd_tweaks.md  07_health_check_setup.md
static/css/: output.css
static/images/favicons/: site.webmanifest
templates/: base.html
templates/web/: landing_page.html
templates/web/components/: dark_mode_selector.html  favicon.html  top_nav.html
terraform/: README.md
terraform/admin_bootstrap/: .terraform.lock.hcl  README.md  hcp_terraform.tf  justfile  terraform.tf  vars.tf
terraform/environments/global/: README.md  main.tf  production.tf  terraform.tf  vars.tf
terraform/environments/production/: .terraform.lock.hcl  main.tf  outputs.tf  render.tf  terraform.tf  vars.tf
(+4 files in other folders)
